# TapeStopPro

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
.github/workflows/: build.yml
